carvel/bundle/config/upstream/kubeflow/apps/volumes-web-app/upstream/overlays/istio/install_order.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: volumes-web-app
    kustomize.component: volumes-web-app
    run: volumes-web-app
  name: volumes-web-app-service
  namespace: kubeflow
  annotations:
    kapp.k14s.io/change-group: apps.kubeflow.org/order-10
    kapp.k14s.io/change-rule: upsert after upserting apps.kubeflow.org/order-9
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    app: volumes-web-app
    kustomize.component: volumes-web-app
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: volumes-web-app
    kustomize.component: volumes-web-app
  name: volumes-web-app-deployment
  namespace: kubeflow
  annotations:
    kapp.k14s.io/change-group: apps.kubeflow.org/order-10
    kapp.k14s.io/change-rule: upsert after upserting apps.kubeflow.org/order-9
spec:
  replicas: 1
  selector:
    matchLabels:
      app: volumes-web-app
      kustomize.component: volumes-web-app
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
      labels:
        app: volumes-web-app
        kustomize.component: volumes-web-app
    spec:
      containers:
      - env:
        - name: APP_PREFIX
          value: /volumes
        - name: USERID_HEADER
          value: kubeflow-userid
        - name: USERID_PREFIX
          value: ""
        - name: APP_SECURE_COOKIES
          value: $(VWA_APP_SECURE_COOKIES)
        image: docker.io/kubeflownotebookswg/volumes-web-app:v1.6.0
        name: volumes-web-app
        ports:
        - containerPort: 5000
      serviceAccountName: volumes-web-app-service-account
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  labels:
    app: volumes-web-app
    kustomize.component: volumes-web-app
  name: volumes-web-app-volumes-web-app
  namespace: kubeflow
  annotations:
    kapp.k14s.io/change-group: apps.kubeflow.org/order-10
    kapp.k14s.io/change-rule: upsert after upserting apps.kubeflow.org/order-9
spec:
  gateways:
  - kubeflow-gateway
  hosts:
  - '*'
  http:
  - headers:
      request:
        add:
          x-forwarded-prefix: /volumes
    match:
    - uri:
        prefix: /volumes/
    rewrite:
      uri: /
    route:
    - destination:
        host: volumes-web-app-service.kubeflow.svc.cluster.local
        port:
          number: 80
